@@ -6,7 +6,6 @@ package MooX::Role::Logger;
 # VERSION
 
 use Moo::Role;
-use Types::Standard qw/Str/;
 
 use Log::Any ();
 
@@ -24,13 +23,10 @@ has _logger => (
 
 sub _build__logger {
     my ($self) = @_;
-    return Log::Any->get_logger( category => $self->_logger_category );
+    return Log::Any->get_logger( category => "" . $self->_logger_category );
 }
 
-has _logger_category => (
-    is  => 'lazy',
-    isa => Str,
-);
+has _logger_category => ( is => 'lazy', );
 
 =method _build__logger_category
 
